--- a/web/pages/index.module.css
+++ b/web/pages/index.module.css
@@ -20,7 +20,7 @@
 
 .card {
   margin: 0.5rem;
-  flex-basis: 12%;
+  flex-basis: 15%;
   padding: 0.5rem;
   text-align: center;
   color: inherit;
@@ -30,6 +30,7 @@
   transition: 0.3s ease;
   font-variant: small-caps;
   background-color: white;
+  white-space: nowrap;
 }
 
 .card h3 {
